--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
