[#49] Setting axios, auth with Redux Saga

--- a/package.json
+++ b/package.json
@@ -158,5 +158,6 @@
       "react-app"
     ]
   },
-  "homepage": "delivery-service"
+  "homepage": "delivery-service",
+  "proxy": "https://delivery-service-web.herokuapp.com/api"
 }
