--- a/package.json
+++ b/package.json
@@ -163,6 +163,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "http://dongwonnn.github.io/delivery-service",
-  "proxy": "https://delivery-service-web.herokuapp.com/api"
+  "homepage": "http://dongwonnn.github.io/delivery-service"
 }
